--- a/frontend/src/main/resources/static/login-form/css/style.css
+++ b/frontend/src/main/resources/static/login-form/css/style.css
@@ -8149,6 +8149,7 @@ a {
     text-decoration: none !important;
     outline: none !important;
     -webkit-box-shadow: none;
+     color: #4A90E2;
     box-shadow: none; }
 
 h1, h2, h3, h4, h5,
