--- a/frontend/src/main/resources/static/login-form/css/style.css
+++ b/frontend/src/main/resources/static/login-form/css/style.css
@@ -8157,7 +8157,7 @@ h1, h2, h3, h4, h5,
   line-height: 1.5;
   font-weight: 400;
   font-family: "Lato", Arial, sans-serif;
-  color: #000; }
+  }
 
 .bg-primary {
   background: #1089ff !important; }
